# price-volume-lab

./: .dockerignore  .env.example  .gitignore  CANONICAL_CONTRACT.md  COMPLIANCE_REPORT.md  Dockerfile  FIX_PLAN.md  LICENSE  Makefile  README.md  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
dashboard/: README.md  app.py  data_reader.py
deploy/: config-QQQ.yaml  config-SPY.yaml
docs/: ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  GLOSSARY.md  ONE_DAY_PAPER_TEST.md  PAPER_TO_LIVE.md  PROJECT_CONTEXT.md  RULEBOOK.md  RUNBOOK.md  TUNING_GUIDE.md  VPA_METHODOLOGY.md
docs/config/: vpa.SPY.json  vpa.default.json  vpa_config.schema.json
docs/vpa/: COMPLIANCE_REPORT_TEMPLATE.md  FIX_PLAN_TEMPLATE.md  VPA_CONFIG.md  (+7 more)
docs/vpa-ck/: vpa_actionable_rules.md  vpa_ai_context.md  vpa_canonical_model.md  vpa_glossary.md  vpa_prompting_guide.md  vpa_signal_flow.md  vpa_system_spec.md
scripts/: vpa_vocab_lint.py
tests/: __init__.py  conftest.py  test_alpaca_fetcher.py  test_atr.py  test_backtest.py  test_canonical_models.py  test_classification.py  test_cli.py  test_config.py  test_context_engine.py  test_context_gates.py  test_daily_context.py  test_daily_helper.py  test_data_pipeline.py  test_execution.py  test_feature_engine.py  test_golden_fixtures.py  test_journal.py  test_pipeline.py  test_risk_engine.py  test_rule_engine.py  test_safety.py  test_scheduler.py  test_setup_composer.py  test_structured_log.py  test_vocab_lint.py  test_vpa_config.py  test_vpa_core_context.py  test_vpa_core_features.py  test_vpa_core_no_demand.py
(+49 files in other folders)
